# stock-screener

./: README.md  pyproject.toml
examples/: fetch_financials.py
src/stock_screener/: __init__.py  cli.py  criteria.py  data.py  formatting.py  models.py  reporting.py  screener.py
src/stock_screener/data/: __init__.py  base.py  cache.py  repository.py  yahoo.py
src/stock_screener/rules/: __init__.py
src/stock_screener/rules/fundamental/: __init__.py  max_pb_ratio.py  max_pe_ratio.py  min_dividend_yield.py  min_market_cap.py
src/stock_screener/rules/quantitative/: __init__.py
